service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs
spec:
  selector:
    app: nodejs
  ports:
    - port: 30
      targetPort: 3000
  type: ClusterIP
